[tool.poetry]
name = "reverse_geocode"
version = "0.1.0"
description = ""
authors = ["Karajgi, Rohit <rohit.karajgi@teradata.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
geopandas = "^0.8.2"
geopy = "^2.1.0"
matplotlib = "^3.3.4"
plotly-express = "^0.4.1"
xlrd = "^2.0.1"
openpyxl = "^3.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
